--- a/.github/workflows/chunker.yml
+++ b/.github/workflows/chunker.yml
@@ -11,16 +11,22 @@ on:
 env:
   LocationOnIndex4MovieChunks: "td:/MovieChunks"
   Input_Movie_Link: ${{ github.event.inputs.Input_Movie_Link }}
-  RCLONE_INSTALL_MIRROR: ${{ secrets.RCLONE_INSTALL_MIRROR }}
   RCLONE_CONFIG_URL: ${{ secrets.RCLONE_CONFIG_URL }}
-  FTOOL_ARC_URL: ${{ secrets.FTOOL_ARC_URL }}
 
 jobs:
 
   splitter:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      
+      - name: Set Git Configs & Secrets
+        uses: rokibhasansagar/custom_workflows/git_config@main
+        with:
+          credential: "yes"
+        env:
+          PAT: ${{ secrets.GH_TOKEN }}
+
       - name: "Movie Chunk Generation Job - ${{env.Input_Movie_Link}}"
         run: |
           chmod a+x ./*.sh
